Bug 153179 - FILESAVE: ODP: Ole object disappears after RT
Summary: FILESAVE: ODP: Ole object disappears after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-01-24 12:28 UTC by Xisco Faulí
Modified: 2023-02-23 10:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-01-24 12:28:01 UTC
This is a follow-up of bug 152436

Steps to reproduce:
1. Open attachment 82991 [details] from bug 67297
2. Save it to ODP
3. Open the new generated file

-> The OLE object is gone

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b9159aa9073318c6892787d721b8cd732525972
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-01-24 12:28:46 UTC
Regression introduced by:

author	Tünde Tóth <toth.tunde@nisz.hu>	2022-09-13 10:29:03 +0200
committer	László Németh <nemeth@numbertext.org>	2022-09-28 14:16:50 +0200
commit adc042f95d3dbd65b778260025d59283146916e5 (patch)
tree be039e80dd6ca2d4b2d8d2baa4c5af0f5ae11ebd
parent 36003e7644014cde9330bf45fee3815278a74035 (diff)
tdf#124333 PPTX import: fix Z-order of embedded OLE objects

Bisected with: bibisect-linux64-7.5

Adding Cc: to Tünde Tóth
Comment 2 Xisco Faulí 2023-01-24 12:48:57 UTC
also reproducible with attachment 148891 [details] from bug 123172
Comment 3 Commit Notification 2023-02-15 08:35:42 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da725dfe07f2cf10349772d1667591c4d6a6fe8a

tdf#153179 ODP export regression: fix lost shape at missing object

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2023-02-16 08:41:41 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02444789bb5e59e2582fdb92a5852db9c6471eac
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Tünde Tóth, thanks for fixing this issue. Should it be closed now ?
Comment 5 Commit Notification 2023-02-16 08:41:58 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/134df0c64da6392648b8d4f7020d95e337307e67

tdf#153179 ODP export regression: fix lost shape at missing object

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-02-23 10:07:16 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/47c465cb049ad8055dbd13a793afa958194185c6

tdf#153179 ODP export regression: fix lost shape at missing object

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.