tdf#153179 ODP export regression: fix lost shape at missing object

If the object is missing, it's still possible to keep its shape
by exporting its preview graphic, as before the regression.

Regression from commit adc042f95d3dbd65b778260025d59283146916e5
"tdf#124333 PPTX import: fix Z-order of embedded OLE objects".

See also commit 907da02bf8b33c080538731864225b3c44251328
"tdf#152436 PPTX export regression: fix lost shape at missing object"

Change-Id: I614730435a857c6cdf01d4cdfc525fc452dffa29
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146247
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit da725dfe07f2cf10349772d1667591c4d6a6fe8a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146990
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>